CRUD unit tests
