# docs/swagger.json
@@ -52,7 +52,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/db.CreateProjectParams"
+                            "$ref": "#/definitions/http.createProjectRequest"
                         }
                     }
                 ],
@@ -266,7 +266,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/db.CreateTaskParams"
+                            "$ref": "#/definitions/http.createTaskRequest"
                         }
                     }
                 ],
@@ -648,29 +648,6 @@
         }
     },
     "definitions": {
-        "db.CreateProjectParams": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "end_date": {
-                    "type": "string"
-                },
-                "manager_id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                }
-            }
-        },
-        "db.CreateTaskParams": {
-            "type": "object"
-        },
         "db.CreateUserParams": {
             "type": "object",
             "properties": {
@@ -680,23 +657,8 @@
                 "full_name": {
                     "type": "string"
                 },
-                "registration_date": {
-                    "type": "string"
-                },
                 "role": {
                     "type": "string"
-                }
-            }
-        },
-        "db.NullableTime": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
                 }
             }
         },
@@ -730,7 +692,7 @@
                     "type": "integer"
                 },
                 "completion_date": {
-                    "$ref": "#/definitions/db.NullableTime"
+                    "$ref": "#/definitions/sql.NullTime"
                 },
                 "creation_date": {
                     "type": "string"
@@ -805,7 +767,33 @@
             }
         },
         "db.UpdateTaskParams": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "assignee_id": {
+                    "type": "integer"
+                },
+                "completion_date": {
+                    "$ref": "#/definitions/sql.NullTime"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "priority": {
+                    "$ref": "#/definitions/db.TaskPriority"
+                },
+                "project_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/db.TaskStatus"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
         },
         "db.UpdateUserParams": {
             "type": "object",
@@ -847,6 +835,63 @@
                 }
             }
         },
+        "http.NullableTime": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "http.createProjectRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "manager_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.createTaskRequest": {
+            "type": "object",
+            "properties": {
+                "assignee_id": {
+                    "type": "integer"
+                },
+                "completion_date": {
+                    "$ref": "#/definitions/http.NullableTime"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "priority": {
+                    "type": "string"
+                },
+                "project_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "response.Object": {
             "type": "object",
             "properties": {
@@ -855,6 +900,18 @@
                     "type": "string"
                 },
                 "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "sql.NullTime": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
                 }
             }
